--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,9 +11,16 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>
+        <h1>
         <a href="/">Just Tech News</a>
-      </h1>
+        </h1>
+        <nav>
+          {{#if loggedIn}}
+          <button id="logout" class="btn-no-style">logout</button>
+          {{else}}
+          <a href="/login">login</a>
+          {{/if}}
+        </nav>
     </header>
     <main>
       {{{ body }}}
@@ -22,7 +29,9 @@
       Thanks for visiting!
     </footer>
   </div>
-
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
